--- a/templates/table.html
+++ b/templates/table.html
@@ -19,7 +19,11 @@
           <th>SI Unit</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody>
+        <tr id="no-data-msg">
+          <td colspan="2">Upload an image from the capture page to see OCR results here.</td>
+        </tr>
+      </tbody>
     </table>
   </div>
 
