--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,3 +132,12 @@ tr:nth-child(even) {
 #tablebtn:active{
   background-color: red;
 }
+#switchCameraBtn {
+  margin: 10px;
+  padding: 10px;
+  background-color: #005eff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
