--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="main-container">
     <h1>OCR Data Capture Dashboard</h1>
+    <button id="switchCameraBtn">Switch Camera</button>
 
     <video id="video" autoplay></video>
 
